 
2008-01-17 cjg
 * Added an "id" attribute to <select> fields, which means that they can be
    found with prototype $F() method -- fixing some issues with autocomplete.

2008-01-18 cjg
 * Added missing phrase for reload-config screen.
 * Added Links to documentation from config editor.
 * Improved layout of config browse.

2008-01-18 cjg
 * Multiple field tables now get a primary key, although this isn't created
    if you upgrade (yet).
	
2008-01-18 cjg
 * User "admin" role now can view config, but requires a edit-config role to
    be allowed to change it via CGI.

2008-01-18 cjg
 * Workflow config reloads if changed on disk. Closes #3182
 * Citation config reloads if changed on disk. Closes #3181 

2008-01-22 tdb
 * When finding the parts of a date/time allow splitting on 'T' and 'Z' (time)
 * Allow date/datetime search terms to include a time component
 * Modified oai interface to support seconds granularity, fixing #3227 in a
    different way

2008-01-23 tdb
 * Load the EPrints::Plugin module last to avoid dependency issues in
    dynamically loaded plugins
 * Added EPrints::CLIProcessor module for handling CLI messages
 * If the time part of the lastmod is null default to 00:00:00, fixing #3243

2008-01-24 tdb
 * Upgrade multiple tables by extending the PRIMARY KEY over the pos field,
    fixing #3235
 * Changed eprint & doc ids in access to INT, changed referring_entity_id to
    LONG, fixing #3128
 * oai_accesslogs script is now *enabled*, but requires that the user be logged
    in and have the 'access-view' role

2008-01-25 tdb
 * Added URI::OpenURL module, to enable the openurl resolver by default

2008-02-01 tdb
 * Fixed typo in oai2 that prevented filters working, fixing #3250
 * Added Export::TextFile superclass to support BOMed outputs, modified EndNote
    export to export in UTF-8, modified RIS export to export in latin-1 (don't
    squash hi-byte chars), fixing #2934
 * Don't fill in autocompletion on tab, fixing #3247
